# gamba

./: .ai-ignore  .gitignore  BLOCK_LOTTERY_ISOLATION_ANALYSIS.md  COMPREHENSIVE_RESULTS_CITATION.md  Cargo.toml  DEPLOYMENT.md  ORBITAL_WAND_README.md  README.md  SUCCESSFUL_DEPOSIT_DEMONSTRATION.md  TEST_SUITE_SUMMARY.md  build.rs  build_path_check  canary.txt  debug_threshold.rs  env.js  gamba_test_output.json  gamba_test_output.txt  libfactory_build.rlib  package-lock.json  package.json  test_opcode_10.rs  update_precompiled.py  update_precompiled_no_bonus.py  wand_factory.hex  wand_token.hex
alkanes/: .rustc_info.json
alkanes/auth-token/: Cargo.toml
alkanes/auth-token/src/: lib.rs
alkanes/coupon-template/src/: lib.rs  svg_generator.rs
alkanes/factory/: Cargo.toml
alkanes/factory/src/: lib.rs
alkanes/free-mint/: Cargo.toml
alkanes/free-mint/src/: lib.rs
alkanes/release/: libwand_factory.d
alkanes/release/.fingerprint/adler2-347d3414211a9b86/: lib-adler2.json
alkanes/release/.fingerprint/alkanes-macros-4eaffd517871496d/: lib-alkanes_macros
alkanes/release/.fingerprint/alkanes-macros-acbcc60f65cc3b3c/: lib-alkanes_macros  output-lib-alkanes_macros
alkanes/release/.fingerprint/alkanes-runtime-5649f435331d9c71/: lib-alkanes_runtime  lib-alkanes_runtime.json
alkanes/release/.fingerprint/alkanes-support-036ec0eac6c92b99/: lib-alkanes_support
alkanes/release/.fingerprint/alkanes-support-4248d9de8329807e/: build-script-build-script-build.json
alkanes/release/.fingerprint/alkanes-support-823d61c49de2a2c7/: build-script-build-script-build.json
alkanes/release/.fingerprint/anyhow-2c4a56f123d188c0/: build-script-build-script-build  build-script-build-script-build.json
alkanes/release/.fingerprint/anyhow-5267031f24f0d817/: build-script-build-script-build  build-script-build-script-build.json
alkanes/release/.fingerprint/anyhow-c6ef25b0be2a8f18/: run-build-script-build-script-build
alkanes/release/.fingerprint/anyhow-f24cd8b05c6b22e3/: lib-anyhow.json
alkanes/release/.fingerprint/anyhow-f36ca6785c7b8006/: lib-anyhow
alkanes/release/.fingerprint/arrayvec-d966eebf08863feb/: lib-arrayvec.json
alkanes/release/.fingerprint/bech32-239c61a904b45500/: lib-bech32.json
alkanes/release/.fingerprint/bitcoin-1c345898cae75397/: build-script-build-script-build
alkanes/release/.fingerprint/bitcoin-518627ebefe7a08a/: build-script-build-script-build  build-script-build-script-build.json
alkanes/release/.fingerprint/bitcoin-63f4291a7cda7a27/: lib-bitcoin  lib-bitcoin.json
alkanes/wand-factory/: Cargo.toml
alkanes/wand-factory/src/: lib.rs
alkanes/wand-token/: Cargo.toml
alkanes/wand-token/src/: lib.rs  svg_generator.rs
alkanes/wasm32-unknown-unknown/release/: liborbital_wand_factory.d  liborbital_wand_factory.rlib  libwand_factory.d  libwand_template.d  orbital_wand_factory.wasm  wand_factory.wasm  wand_template.d
coupon-template/: Cargo.toml
coupon-template/src/: coupon_svg.rs  coupon_template.rs  lib.rs
factory/: Cargo.toml
factory/src/: coupon_factory.rs  lib.rs  orbital_wand.rs  probability.rs
factory/src/tests/: mod.rs  orbital_wand_integration_test.rs  orbital_wand_integration_test.rs.disabled
factory/src/tests/std/: dust_swap_build.rs  mod.rs  orbital_wand_build.rs
memory-bank/: GAMBA_ARCHITECTURE.md  boiler-gamba-comparison-analysis.md  boiler-to-gamba-translation-analysis.md  build-process-alignment-plan.md  coupon-redemption-implementation.md  coupon-template-isolated-behavior-analysis.md  coupon-token-return-issue.md  current-status-summary.md  debug-analysis-integration-test.md  debuggingBreakthrough.md  deployment-pattern-analysis.md  deployment-schedule-insights.md  factory-build-system-breakthrough.md  happy-path-progress.md  implementationStatus.md  projectBrief.md  systemPatterns.md  techContext.md
src/: lib.rs  orbital_wand.rs  wand_svg.rs  wand_template.rs
src/alkanes/: mod.rs
src/alkanes/coupon-template/: Cargo.toml
src/alkanes/coupon-template/src/free-mint/: Cargo.toml
src/alkanes/coupon-template/src/free-mint/src/: lib.rs
src/alkanes/precompiled/: coupon_template_build.rs
src/alkanes/release/: libwand_factory.rlib  libwand_token.d
src/precompiled/: alkanes_std_auth_token_build.rs  auth_token_build.rs  coupon_template_build.rs  factory_build.rs  free_mint_build.rs  mod.rs  token_factory_build.rs  token_template_build.rs  wand_factory_build.rs  wand_token_build.rs
src/tests/: alkane_execution_test.rs  basic_token_test.rs  block_isolation_demonstration_test.rs  boiler_pattern_test.rs  complete_payout_demonstration.rs  comprehensive_coupon_test.rs  comprehensive_gamba_lottery_test.rs  comprehensive_gambling_test.rs  concurrent_coupon_creation_test.rs  concurrent_working_test.rs  coupon_creation_verification.rs  coupon_system_integration_test.rs  coupon_template_isolated_test.rs  coupon_utils.rs  debug_minimal_test.rs  dust_bonus_verification_test.rs  final_comprehensive_test.rs  final_concurrent_test.rs  fixed_comprehensive_test.rs  fixed_opcode_test.rs  gamba_deposit_redemption_test.rs  happy_path_redemption.rs  integration_test.rs  merkle_xor_test.rs  minimal_coupon_test.rs  minimal_test.rs  mod.rs  multi_user_lottery_win_demonstration.rs  multi_user_pot_distribution_test.rs  multiple_mint_test.rs  orbital_forge_verification_test.rs  orbital_integration_test.rs  orbital_wand_integration_test.rs  position_validation_test.rs  probability_calculation_test.rs  probability_demonstration_test.rs  proven_multi_user_lottery.rs  simple_concurrent_test.rs  simple_factory_test.rs  simple_test.rs  (+7 more)
src/tests/precompiled/: mod.rs
src/tests/std/: coupon_template_build.rs  factory_build.rs  mod.rs  wand_factory_build.rs  wand_token_build.rs
wand-template/: Cargo.toml
wand-template/src/: lib.rs  wand_template.rs
(+696 files in other folders)
