[workspace]
members = ["factory", "wand-template"]
resolver = "2"

[workspace.dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
anyhow = "1.0.94"
bitcoin = { version = "0.31.0", features = ["rand"], default-features = false }
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[workspace.dev-dependencies]
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = [
    "test-utils",
] }
hex_lit = "0.1.1"
