[workspace]
members = [".", "alkanes/wand-factory", "alkanes/wand-token", "factory", "wand-template"]
resolver = "2"

[workspace.dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.6", features = ["rand", "std"] }
hex = "0.4.3"
hex_lit = "0.1.1"
secp256k1 = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"

[package]
name = "gamba-wand-system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug-log = ["alkanes/debug-log"]

[dependencies]
alkanes-runtime.workspace = true
bitcoin.workspace = true
hex_lit = "0.1.1"
ordinals.workspace = true
protobuf = "3.7.2"

[dev-dependencies]
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = ["test-utils"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.49"
anyhow.workspace = true
metashrew-support.workspace = true
alkanes-support.workspace = true
protorune-support.workspace = true
once_cell = "1.19.0"
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"

[workspace.dev-dependencies]
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "97c8b715", features = [
    "test-utils",
] }
hex_lit = "0.1.1"
