[package]
name = "orbital-wand-factory"
version = "0.1.0"
edition = "2021"
description = "Orbital Wand Factory - Creates individual wand NFTs using cellpack pattern"
authors = ["Gamba Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
wasm-bindgen-test = { workspace = true }
alkanes-runtime = { workspace = true, features = ["test-utils"] }
alkanes = { workspace = true, features = ["test-utils"] }
metashrew-core = { workspace = true, features = ["test-utils"] }
protorune = { workspace = true, features = ["test-utils"] }
hex_lit = { workspace = true }

[features]
default = []
test = []